--- a/style.css
+++ b/style.css
@@ -14,16 +14,10 @@ nav {
     background:darkgray;
     height: 80px;
     width: 100%;
+    overflow: auto;
     
 }
 
-label.logo {
-    color:white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
-}
 
 nav ul {
     float: right;
@@ -33,7 +27,7 @@ nav ul {
 nav ul li {
     display: inline-block;
     line-height: 80px;
-    margin: 0 5px;
+    margin: 0 20px;
 }
 
 nav ul li a {
@@ -41,12 +35,6 @@ nav ul li a {
     font-size: 17px;
     padding: 7 13px;
     border-radius: 3px;
-}
-
-a.active,li:hover {
-    background: black;
-    transition: .25s;
-    
 }
 
 .checkbtn {
@@ -59,50 +47,16 @@ a.active,li:hover {
     display: none;
 }
 
+.logo {
+    position: absolute;
+    margin-top: 15px;
+    margin-left: 1in;
+}
+
 #check {
     display: none;
 }
 
-@media (max-width: 952px) {
-    label.logo {
-        font-size: 30px;
-        padding-left: 50px;
-    }
-    nav ul li a {
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 858px) {
-    .checkbtn {
-        display: block;
-    }
-    ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: rgb(94, 93, 93);
-        top: 80px
-        left: -100%;
-        text-align: center;
-        transition: all .25s;
-    }
-    nav ul li {
-        display: block;
-        margin: 50px 0;
-        line-height: 30px ;
-    }
-    nav ul li a {
-        font-size: 20px;
-    }
-    a:hover,a.active {
-        background: none;
-        color: black ;
-    }
-    #check:checked ~ ul {
-        left: 0;
-    }
-}
 
 h1 {
     color: white;
