--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ nav {
     height: 86px;
     width: 100%;
     overflow: auto;
-    
 }
 
 
@@ -67,8 +66,10 @@ h1 {
 
 .img-crochet {
     background-size: 100%;
-    width: 1990px;
+    width: 100%;
     height: 700px;
+    object-fit: cover;
+    object-position: center;
 }
 
 
@@ -86,7 +87,6 @@ h4 {
     padding: 2rem 3rem;
     white-space: nowrap;
     cursor: pointer;
-    
 }
 
 
